--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,14 @@ body{
     /* background: #ccc; */
     background: #ccc url("../images/back.jpg") no-repeat;
     background-size: cover;
-    font-family: 'Viga', sans-serif;
-    font-size: 1em;
+    /* font-family: 'Viga', sans-serif; */
+    font-family: 'Oswald', sans-serif;
+    /* font-size: 1em; */
+    font-size: 1.2em;
 }
 /* ------------------------Main Conatiner Styling---------------------- */
 #container{
-    width: 80%;
+    width: 70%;
     height: 500px;
     margin:auto auto;
     margin-top:5%;
@@ -70,6 +72,7 @@ header h1{
 #dynamicDiv li{
     list-style: none;
     width: 50%;
+    font-size: 1.2em;
     margin:auto auto;
 }
 #dynamicDiv li:hover{
@@ -78,8 +81,12 @@ header h1{
     background: #ccc;
 
 }
+#quesHeadingId{
+    font-size: 1.3em;
+}
 #dynamicDiv #nope{
     display: block;
+    
 }
 #ulDynamic{
     margin-top: 20px;
@@ -118,4 +125,69 @@ header h1{
     border:2px solid #000;
     margin-top: 10px;
     box-shadow: 2px 3px 4px #000;
+}
+
+@media only screen and (max-width:500px){
+    #container{
+        height: 770px;
+        margin-bottom: 6%;
+        overflow: auto;
+        width: 85%;
+    }
+    header h1{
+        font-size: 1.5em;
+    }
+    
+#dynamicDiv span{
+    font-size: 1.2em;
+    display: block;
+}
+#dynamicDiv h2{
+    font-size: 1.3em;
+}
+#btnStart {
+    font-size: 1.2em;
+    height: 70px;
+}
+#btnRestart {
+font-size: 1.2em;
+width: 80%;
+}
+#dynamicDiv li{
+    width: 80%;
+}
+}
+
+@media only screen and (max-width:1050px){
+    #btnRestart {
+        font-size: 1.2em;
+        width: 80%;
+}
+#dynamicDiv li {
+    font-size: 1.3em;
+}
+
+}
+
+
+@media only screen and (max-width:2000px){
+    #btnRestart {
+        font-size: 1.2em;
+        width: 80%;
+}
+
+#dynamicDiv li {
+    font-size: 1.5em;
+}
+.listDynamic{
+    /* margin-top: 10px; */
+    padding:5px;
+    font-size: 1.3em;
+}
+
+#quesHeadingId{
+    font-size: 1.4em;
+}
+
+
 }
