--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,13 +102,13 @@ header h1{
     margin-top: 10px;
 }
 #btnRestart{
-    width:30%;
+    width:40%;
     height: 80px;
     border: 2px solid #000;
     border-radius: 5px;
     background:rgb(1, 33, 63);
     color:#fff;
-    font-size: 2em;
+    font-size: 1.6em;
     letter-spacing: 2px;
     margin-top: 20px;
 }
@@ -168,7 +168,7 @@ width: 80%;
 }
 
 }
-
+/* 
 
 @media only screen and (max-width:2000px){
     #btnRestart {
@@ -181,13 +181,13 @@ width: 80%;
 }
 .listDynamic{
     /* margin-top: 10px; */
-    padding:5px;
+    /* padding:5px;
     font-size: 1.3em;
 }
 
 #quesHeadingId{
     font-size: 1.4em;
-}
+} */
 
 
-}
+/* } */ */
