--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 body{
     /* background: #ccc; */
-    background: #ccc url("../images/back.jpg") no-repeat;
+    background: #ccc url("../images/background_img.jpg") no-repeat;
     background-size: cover;
     /* font-family: 'Viga', sans-serif; */
     font-family: 'Oswald', sans-serif;
@@ -22,16 +22,36 @@ body{
     box-shadow: -2px 3px 9px #000;
     text-align: center;
     padding: 5px;
-    background: rgba(44, 76, 165, 0.5);
+    background: rgba(138, 142, 155, 0.5);
     border-radius: 20px;
 }
 /* --------------------------Header Styling--------------------- */
 header h1{
     width: 100%;
-    font-size: 3.5em;
-    font-family: 'Righteous', cursive;
+    font-size: 2.5em;
+    /* font-family: 'Righteous', cursive; */
+    font-family: 'Notable', sans-serif;
     letter-spacing: 2px;
+    animation: headerAnimation 2s ;
 }
+@keyframes headerAnimation {
+    0%   {
+        background-color: red;
+        font-size: 3em;
+    }
+    25%  {
+        background-color: yellow;
+        font-size: 2.5em
+    }
+    50%  {background-color: blue;
+        font-size: 2em
+    }
+    100% {
+        background-color: green;
+        font-size: 2.5em
+    }
+  }
+  
 /* ----------------Button styles--------------------------- */
 #btnDiv{
     width: 50%;
